--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,25 @@ body {
 }
 
 .display{
-    height: 24%;
+    display: flex;
+    flex-direction: column;
+    /* padding: 10% 0; */
+    justify-content: space-between;
+    align-items: center;
+    height: 25%;
     background-color: gray;
-    margin-bottom: 8%;
+    margin-bottom: 5%;
+}
+
+.display > *{
+    font-size: 30px;
+    width: 80%;
+    height: 45%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
 }
 
 .grid-container{
@@ -38,11 +54,16 @@ body {
 }
 
 a{
-    font-size: large;
+    /* width: 100%; height: 100%; */
+    display:inline-block;
+    font-size: 25px;
+    color:aliceblue;
     text-align: center;
-    vertical-align: middle;
+    vertical-align:middle;
 }
 
 .grid-item.equal{
     grid-column: 3 / 5;
 }
+
+/* .grid-item a { display: block; } */
